deploy/spool/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spool
  namespace: default
  labels:
    app: spool
spec:
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
  selector:
    app: spool
  type: ClusterIP
