deploy/spool/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: spool-ingress
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`spool.local`)
      kind: Rule
      services:
        - name: spool
          port: 3001
  middlewares:
    - name: authentik-auth
